[tool.poetry]
name = "sir-robin"
version = "0.1.0"
description = ""
authors = ["Python Discord <info@pythondiscord.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"

pydis-core = { version = "11.5.1", extras = ["all"]}
arrow = "1.3.0"
sentry-sdk = "2.19.0"
pydantic-settings = "2.6.1"

[tool.poetry.group.dev.dependencies]
taskipy = "1.14.1"

[tool.poetry.group.test.dependencies]
hypothesis = "6.122.0"
pytest = "8.3.3"
pytest-asyncio = "0.24.0"

[tool.poetry.group.lint.dependencies]
ruff = "0.8.1"
pre-commit = "4.0.1"

[tool.taskipy.tasks]
start = "python -m bot"
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
test = "python -m unittest discover"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
extend-exclude = [".cache"]
line-length = 120
unsafe-fixes = true
output-format = "concise"

[tool.ruff.lint]
select = ["ANN", "B", "C4", "D", "DTZ", "E", "F", "I", "ISC", "INT", "N", "PGH", "PIE", "Q", "RET", "RSE", "RUF", "S", "SIM", "T20", "TID", "UP", "W"]
ignore = [
    "ANN002", "ANN003", "ANN204", "ANN206", "ANN401",
    "B904",
    "C401", "C408",
    "D100", "D104", "D105", "D107", "D203", "D212", "D214", "D215", "D301",
    "D400", "D401", "D402", "D404", "D405", "D406", "D407", "D408", "D409", "D410", "D411", "D412", "D413", "D414", "D416", "D417",
    "E731",
    "RET504",
    "RUF005", "RUF012", "RUF015",
    "S311",
    "SIM102", "SIM108",
]

[tool.ruff.lint.isort]
order-by-type = false
case-sensitive = true
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D"]
